--- a/src/app/views/pokemon-list/main-pokemon-list/main-pokemon-list.component.html
+++ b/src/app/views/pokemon-list/main-pokemon-list/main-pokemon-list.component.html
@@ -1,5 +1,5 @@
 <main>
-    <img
+    <img class="pokemon-logo"
         src="https://images.wikidexcdn.net/mwuploads/esssbwiki/thumb/7/77/latest/20111028181540/TituloUniversoPok%C3%A9mon.png/550px-TituloUniversoPok%C3%A9mon.png" />
     <div id="pokemon-table-title">
         <h2 class="bolder">
