--- a/src/app/views/error-page/error-page.component.scss
+++ b/src/app/views/error-page/error-page.component.scss
@@ -6,16 +6,16 @@
     align-items: center;
     flex-direction: column;
     height: 80vh;
-}
 
-.btn-back {
-    background: $grayDark;
-    color: white;
-    border-radius: 1em;
-}
+    .btn-back {
+        background: $grayDark;
+        color: white;
+        border-radius: 1em;
 
-.btn-back:hover {
-    background: $slate;
-    color: white;
-    border-radius: 1em;
+        &:hover {
+            background: $slate;
+            color: white;
+            border-radius: 1em;
+        }
+    }
 }
