--- a/src/app/views/pokemon-list/main-pokemon-list/main-pokemon-list.component.html
+++ b/src/app/views/pokemon-list/main-pokemon-list/main-pokemon-list.component.html
@@ -9,8 +9,9 @@
         <p class="text-lead bold">151 Pokemons</p>
     </div>
 
-    <div id="pokemon-table-list">
-        <div class="pokemon-table-item pointer" *ngFor="let pokemon of pokemons">
+    <div id="pokemon-table-list" [@listAnimation]="(mainPokemonListService.pokemons$ | async)?.length" infiniteScroll
+        [infiniteScrollDistance]="3" [infiniteScrollThrottle]="50" (scrolled)="onScroll()">
+        <div class="pokemon-table-item pointer" *ngFor="let pokemon of mainPokemonListService.pokemons$ | async">
             <app-pokemon-preview [pokemon]="pokemon" (click)="goToPokemonDetail(pokemon.name)"></app-pokemon-preview>
         </div>
     </div>
