--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -1,23 +1,7 @@
-$background: #F5F3F3;
-$white: #FFFFFF;
-$green: #33DBB4;
-$yellow: #F9B402;
-$blue: #0847A6;
-$primary: #313C48;
-$secondary: #ADB4BF;
-$secondaryLight: #e8e8e9;
-$grayLight: #EDEDEF;
-$gray: #BFC5CD;
+$background: #f5f3f3;
+$white: #ffffff;
+$gray: #bfc5cd;
 $grayDark: #4d4d4d;
-$red: #E9323C;
-$it: #732F76;
-$greenLight: #5fd15f;
-
-// Atlassian colors
-$pacificBridge: #0052CC;
-$slate: #091E42;
-$snorlax: #253858;
-$mcFanning: #42526E;
-$doctor: #FFFFFF;
-$humboldtFog: #7A869A;
-$dragonsBlood: #BF2600;
+$red: #e9323c;
+$dragonsBlood: #bf2600;
+$slate: #091e42;
